# Template

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  REMEDIATION_PLAN.md  REPOSITORY_REVIEW.md  copier.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: add-platform.md  sync-ai-context.md
.claude/rules/: doc-organization.md  jinja-templates.md
.github/workflows/: template-validation.yml
docs/: README.md  ai-surfaces.md  current-status.md  generated-projects.md  getting-started.md  maintainer-workflow.md  prism-model.md  questionnaire.md  wiki-validation.md  wiki-workflow.md
prism_cli/: __init__.py  __main__.py  cli.py  presets.py  ui.py
scripts/: validate-template.ps1
template/: .env.example.jinja  .env.jinja  .gitignore.jinja  AGENTS.md.jinja  CLAUDE.md.jinja  README.md.jinja  Taskfile.yml.jinja  docker-compose.yml.jinja
template/android/: AGENTS.md.jinja
template/backend/: AGENTS.md.jinja  CLAUDE.md.jinja  Taskfile.yml.jinja  build.gradle.kts.jinja
template/docs/: advisory-board.md.jinja  architecture.md.jinja
template/ios/: CLAUDE.md.jinja
template/mobile-android/: AGENTS.md.jinja  CLAUDE.md.jinja  Taskfile.yml  local.config.properties.jinja  settings.gradle.kts.jinja
template/mobile-ios/: AGENTS.md.jinja  CLAUDE.md.jinja  Taskfile.yml.jinja  project.yml.jinja
template/web-admin-portal/: .dev.vars.example.jinja  CLAUDE.md.jinja  next.config.mjs.jinja  package.json.jinja  wrangler.jsonc.jinja
template/web-user-app/: .dev.vars.example.jinja  next.config.mjs.jinja  (+2 more)
tests/: test_core.py
(+232 files in other folders)
